[package]
name = "burrata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
chrono = "0.4.38"
nom = "7.1.3"
rodio = "0.19.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
thiserror = "1.0.66"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron = "0.1.3"
tower-http = { version = "0.6.1", features = ["fs"] }
