[package]
name = "burrata"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
include_dir = "0.7.4"
jiff = "0.1.14"
mime_guess = "2.0.5"
rodio = "0.19.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.67"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["compression-full", "decompression-full", "fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
